// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button displays a button with requested text 1`] = `
<button
  className="Button__StyledButton-sc-1gypvbx-0 "
  type="primary"
>
  Click Me!
</button>
`;

exports[`Button displays a secondary button with requested text 1`] = `
<button
  className="Button__StyledButton-sc-1gypvbx-0 "
  type="secondary"
>
  ⊙_ʘ
</button>
`;

exports[`Styled Button displays a button with requested text 1`] = `
<button
  className="Button__StyledButton-sc-1gypvbx-0 "
>
  Click Me!
</button>
`;

exports[`Styled Button displays a secondary button with requested text 1`] = `
<button
  className="Button__StyledButton-sc-1gypvbx-0 "
  type="secondary"
>
  ⊙_ʘ
</button>
`;
